fix contrast issues with caret fix #325 ref #221

--- a/assets/sass/components/mega-menu.scss
+++ b/assets/sass/components/mega-menu.scss
@@ -47,9 +47,10 @@
   border-left: 1px solid $silver;
   border-right: 1px solid $silver;
   text-align: center;
-  color: $empress;
+  color: $coal;
   &:hover {
     color: $venetian-red;
+    text-decoration: none;
   }
   .nav-page-list & {
     width: 100px;
