--- a/assets/sass/components/navigation.scss
+++ b/assets/sass/components/navigation.scss
@@ -367,7 +367,7 @@ Add `<div class="overlay"></div>` at the end of the `body` tag to display the gr
         left: 0;
         width: 100%;
         text-align: center;
-        color: $empress;
+        color: $coal;
         font-size: 0.9em;
       }
       &:hover, &:focus {
